# game-server-admin

./: .conflow.yaml  .envrc  .gitignore  .guix-channel  .tool-versions  0-AI-MANIFEST.a2ml  CONFIG-CHANGES.md  Containerfile  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  TEST-NEEDS.md  TOPOLOGY.md  USER-CONFIG.md  eclexiaiser.toml  flake.nix  game-server-admin-launcher.sh  game-server-admin.desktop  game-server-admin.launcher.a2ml  guix.scm  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  play.sh  run.js  setup.sh  stapeln.toml  user-config.ncl.template  wokelangiser.toml
.claude/: CLAUDE.md
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  SECURITY.md  SUPPORT  copilot-instructions.md  pull_request_template.md
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ENSAID_CONFIG.a2ml  INTENT.contractile  MUST.contractile  TRUST.contractile
.well-known/: ai.txt  humans.txt  security.txt
container/: .gatekeeper.yaml  Containerfile  README.adoc  compose.toml  ct-build.sh  deploy.k9.ncl  entrypoint.sh  manifest.toml  selur-compose.toml  vordr.toml
docs/: DEPLOYMENT-RUNBOOK.adoc  RSR_OUTLINE.adoc
panels/: manifest.json
profiles/: ark.a2ml  barotrauma.a2ml  burble.a2ml  cryofall.a2ml  csgo-cs2.a2ml  dayz.a2ml  dst.a2ml  factorio.a2ml  garrysmod.a2ml  (+9 more)
src/wasm/: Cargo.toml  build-complete.sh  build-typed.sh  build.sh  gsa-probe-advanced.twasm  gsa-probe.twasm  launch-gsa.sh  probe.zig
(+167 files in other folders)
